VF Ejercicios DOM

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <li><a class="aMenuNav botonPalanca" href="#Section_11">Slider</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_12">Smart Video</a></li>
       <li><a class="aMenuNav botonPalanca" href="#Section_13">Formularios de Contacto (Validaciones)</a></li>
-      <li><a class="aMenuNav botonPalanca" href="#Section_14">Section 14</a></li>
+      <li><a class="aMenuNav botonPalanca" href="#Section_14">Narrador</a></li>
     </ul>
   </nav>
   <section id="Section_1" class="section">
@@ -174,7 +174,15 @@
     </form>
   </section>
   <section id="Section_14" class="section">
-    <h3>Section 14</h3>
+    <h3>Narrador</h3>
+    <select name="" id="speech-select">
+      <option value="---Elige una Voz---"></option>
+    </select>
+    <br><br>
+    <textarea id="speech-text" cols="50" rows="5" placeholder="Ingresa Texto para leer..."></textarea>
+    <br><br>
+    <button id="speech-btn">Leer Texto</button>
+  </section>
   </section>
   <section id="sConexion">
   </section>
